--- a/about us.html
+++ b/about us.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <div class="logo">
       <img src="images/logo_transparent.png" alt="Логотип">
-      <span>Кинотеатр <strong>Семетей</strong></span>
+      <span>Кинотеатр <strong>Семетей Кинотеатры</strong></span>
     </div>
     <nav>
       <ul>
@@ -45,4 +45,5 @@
   </main>
 
 </body>
+
 </html>
